--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "electron": "^2.0.2"
+    "electron": "^2.0.2",
+    "jquery": "^3.3.1"
   }
 }
