--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "8085-simulator",
-  "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "electron": "^2.0.2",
-    "jquery": "^3.3.1"
-  }
+	"name": "8085-simulator",
+	"version": "0.0.1",
+	"private": true,
+	"dependencies": {
+		"electron": "^2.0.2",
+		"jquery": "^3.3.1",
+		"jquery-ui": "^1.12.1"
+	}
 }
