--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"electron": "^2.0.2",
 		"jquery": "^3.3.1",
-		"jquery-ui": "^1.12.1"
+		"jquery-ui": "^1.12.1",
+		"jquery-ui-dist": "^1.12.1"
 	}
 }
