--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"dependencies": {
+		"codemirror": "^5.38.0",
 		"electron": "^2.0.2",
 		"jquery": "^3.3.1",
 		"jquery-ui": "^1.12.1",
