--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "8085-simulator",
 	"version": "0.0.1",
+	"main": "app.js",
 	"private": true,
 	"dependencies": {
 		"codemirror": "^5.40.0",
@@ -8,5 +9,11 @@
 		"jquery": "^3.3.1",
 		"jquery-ui": "^1.12.1",
 		"jquery-ui-dist": "^1.12.1"
+	},
+	"scripts": {
+		"start": "electron ."
+	},
+	"devDependencies": {
+		"electron-prebuilt": "^1.4.13"
 	}
 }
