--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"codemirror": "^5.40.0",
 		"electron": "^2.0.8",
 		"jquery": "^3.3.1",
-		"jquery-ui": "^1.12.1",
+		"jquery-ui": "1.12.1",
 		"jquery-ui-dist": "^1.12.1"
 	},
 	"scripts": {
