--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"main": "app.js",
 	"private": true,
 	"dependencies": {
-		"codemirror": "^5.40.0",
-		"electron": "^2.0.8",
+		"codemirror": "^5.41.0",
+		"electron": "^2.0.13",
+		"electron-settings": "^3.2.0",
 		"jquery": "^3.3.1",
 		"jquery-ui": "1.12.1",
 		"jquery-ui-dist": "^1.12.1"
